// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should render a Circle component 1`] = `
<div>
  <span
    class="circle"
    style="height: 8px; width: 8px;"
  />
</div>
`;

exports[`Circle should render a Circle component with a red color 1`] = `
<div>
  <span
    class="circle"
    style="background-color: red; height: 8px; width: 8px;"
  />
</div>
`;

exports[`Circle should render a Circle component with radius of 15px 1`] = `
<div>
  <span
    class="circle"
    style="height: 15px; width: 15px;"
  />
</div>
`;
